Better logging + stream read error fix for big files.